--- a/Analysis/Visualization_S3.ipynb
+++ b/Analysis/Visualization_S3.ipynb
@@ -37,7 +37,7 @@
     "import numpy as np\n",
     "import seaborn as sb\n",
     "\n",
-    "result = pd.read_csv(\"Submissions\\\\IMC_S3_Updated.csv\", sep = ';')"
+    "result = pd.read_csv(\"Analysis\\\\IMC_S3_Updated.csv\", sep = ';')"
    ]
   },
   {
